--- a/app/views/tempIntroduction.html
+++ b/app/views/tempIntroduction.html
@@ -31,7 +31,7 @@
 
 
     <div class='jumbotron' >
-      <h3>Dec 5, 2016</h3>
+      <h3>Jan 1, 2016</h3>
       <p>Welcome to the new OpenWeb <small style="font-weight:bold;"> </small>
 
         <div class="input-group-btn">
@@ -41,7 +41,8 @@
         </div>
 
         
-        </br><p><small style="">Note: Access the silverlight version of OpenWeb in Internet Explorer browsers:</small></p>
+        <!-- </br><p><small style="">Note: Access the silverlight version of OpenWeb in Internet Explorer browsers:</small></p> -->
+        </br><p><small style="">Note: Select features & functionality may only be accessible in silverlight version of Openweb, available in Internet Explorer browsers:</small></p>
 
         <small><a id="introLink" href="http://gisgate.co.clark.nv.us/openweb/">gisgate.co.clark.nv.us/openweb/</a></small>
 
