--- a/app/css/main-style.css
+++ b/app/css/main-style.css
@@ -2718,20 +2718,6 @@ margin-right:-10px;
 
 
 
-.share-tabs.nav-tabs { border-bottom: 2px solid #DDD;}
-.share-tabs.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; }
-.share-tabs.nav-tabs > li > a { border: none; color: #666; cursor: pointer; }
-.share-tabs.nav-tabs > li.active > a, .nav-tabs > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }
-.share-tabs.nav-tabs > li > a::after { content: ""; background: #4285F4; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
-.share-tabs.nav-tabs > li.active > a::after, .nav-tabs > li:hover > a::after { transform: scale(1); }
-
-/*.tab-nav > li > a::after { background: #21527d none repeat scroll 0% 0%; color: #fff; }*/
-.share-pane.tab-pane { padding: 15px 0; }
-.share-tab-content.tab-content{padding:20px; background-color: #f9f9f9;}
-
-.card {background: #FFF none repeat scroll 0% 0%; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3); margin-bottom: 30px; }
-/*.share-container{ background: #EDECEC; padding:50px}*/
-.share-container{ background: #EDECEC; padding:50px}
 
 
 
@@ -2746,6 +2732,32 @@ margin-right:-10px;
 .modal-footer {
     background-color: #f9f9f9;
 }*/
+
+
+
+
+
+
+
+
+
+/* share nav tabs (pop up modals w/ tabs) */
+.share-tabs.nav-tabs { border-bottom: 2px solid #DDD;}
+.share-tabs.nav-tabs > li.active > a, .share-tabs.nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; }
+.share-tabs.nav-tabs > li > a { border: none; color: #666; cursor: pointer; }
+.share-tabs.nav-tabs > li.active > a, .share-tabs.nav-tabs > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }
+.share-tabs.nav-tabs > li > a::after { content: ""; background: #4285F4; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
+.share-tabs.nav-tabs > li.active > a::after, .share-tabs.nav-tabs > li:hover > a::after { transform: scale(1); }
+
+/*.tab-nav > li > a::after { background: #21527d none repeat scroll 0% 0%; color: #fff; }*/
+.share-pane.tab-pane { padding: 15px 0; }
+.share-tab-content.tab-content{padding:20px; background-color: #f9f9f9;}
+
+.card {background: #FFF none repeat scroll 0% 0%; box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3); margin-bottom: 30px; }
+/*.share-container{ background: #EDECEC; padding:50px}*/
+.share-container{ background: #EDECEC; padding:50px}
+
+
 
 
 /*modal window close icon */
