--- a/app/css/main-style.css
+++ b/app/css/main-style.css
@@ -2606,7 +2606,8 @@ margin-right:-10px;
       position: absolute;
 /*      top: 95px;
       left: 20px;*/
-      z-index: 50;
+      /*z-index: 50;*/
+      z-index: 2;
 
       -webkit-transition: all 0.5s ease-in-out;
        -moz-transition: all 0.5s ease-in-out;
@@ -2660,6 +2661,8 @@ margin-right:-10px;
       background-color: #0D2E56;
 /*        background-color: #333;
         background-color: rgba(102,102,102,0.90);*/
+
+        transition: all 0.30s linear;
     }
 
 
