--- a/app/views/tempInformation.html
+++ b/app/views/tempInformation.html
@@ -163,13 +163,90 @@
        </select>
      </div> -->
 
-     <div class="dropdown">
+     <div class="dropdown customarrow">
         <b>Coords in </b>
         <select class="coordsDropDown" ng-model="selectedOption" ng-options="coordOption.name for coordOption in coordOptions" ng-change="changeCoords(selectedOption)">
 <!--           <option value="stateplaneft" selected="selected">State Plane ft. </option>
           <option value="latlong">Lat / Long</option> -->
         </select>
       </div>
+
+ <!--      <br> -->
+
+
+<!--       <label>
+        <select id="international"> 
+          <option value="tests" selected="selected">México / Español</option>
+          <option value="tests.au">Australia / English</option>
+          <option value="tests.br/">Brazil / Português</option>
+          <option value="tests">Benelux / Dutch</option>
+          <option value="tests">Canada / English</option>
+          <option value="tests/fr-ca">Canada / Français</option>
+          <option value="tests">Česko / Česky</option>
+          <option value="tests">Danmark / Dansk</option>
+          <option value="tests">Deutschland / Deutsch</option>
+          <option value="tests">España / Español</option>
+          <option value="tests">France / Français</option>
+          <option value="tests.hk">Hong Kong / English</option>
+          <option value="tests">Ireland / English</option>
+          <option value="tests">Italia / Italiano</option>
+          <option value="tests">Norge / Norsk</option>
+          <option value="tests.za">South Africa / English</option>
+          <option value="tests">Sverige / Svenska</option>
+          <option value="tests">Schweiz / Deutsch</option>
+          <option value="tests">USA / English</option>
+          <option value="tests.kr">대한민국 / 한국의</option>
+          <option value="tests.jp">日本の / 日本 </option>
+          <option value="tests.cn">中國 / 中國</option>
+        </select>
+      </label>
+ -->
+
+
+
+
+
+
+
+
+
+      
+
+
+      <!-- multi-browser dropdown select test -->
+<!--       <div class="select">
+          <select name="select">
+              <option>select</option>
+              <option>option</option>
+              <option>option</option>
+              <option>option</option>
+              <option>option</option>
+              <option>option</option>
+              <option>option</option>
+          </select>
+      </div>
+
+      <br> -->
+
+<!--       <select class="minimal">
+        <option>CSS SELECT arrow (minimal)</option>
+        <option>No external background image</option>
+        <option>No wrapper</option>
+      </select>
+ -->
+
+<!--       <div class="selectdiv ">
+        <label>
+            <select>
+                <option selected> Select Box </option>
+                <option>Option 1</option>
+                <option>Option 2</option>
+                <option>Last long option</option>
+            </select>
+        </label>
+      </div>
+ -->
+
 
 
 
